# tier-aware-kv-cache

./: .gitignore  CMakeLists.txt  README.md  orchestrator.py  parallel_pipeline.py  requirements.txt  setup.sh
benchmarks/: benchmark_suite.py  dataset_loader.py  metrics.py
configs/: default_config.yaml
include/: migration_orchestrator.h  tiered_block_allocator.h
policies/: alto.py  soar.py  speculative_prefetcher.py
profiling/: online_profiler.py
results/: capacity_summary.txt  mistral_7b_beam_t1400mb.json  mistral_7b_beam_t1400mb.txt  mistral_7b_long_t1400mb.json  mistral_7b_long_t1400mb.txt  mistral_7b_mixed_t1400mb.json  mistral_7b_mixed_t1400mb.txt
results/vllm_baseline/: results_baseline.txt  results_baseline_full.txt
resultsprev/: benchmark_results.json  gpu_results_all.txt  pressure_1024mb.txt  pressure_13b_beam_1024mb.txt  pressure_13b_beam_4096mb.txt  pressure_13b_beam_512mb.txt  pressure_13b_long_1024mb.txt  pressure_13b_long_4096mb.txt  pressure_13b_long_512mb.txt  pressure_4096mb.txt  pressure_512mb.txt  pressure_7b_512mb.txt  pressure_beam_1024mb.txt  pressure_beam_512mb.txt
src/allocator/: tiered_block_allocator.cpp
src/api/: telemetry_api.py
src/attention/: paged_attention_kernel.cu
src/manager/: __init__.py  orchestrator.py
src/migration/: migration_orchestrator.cpp
src/profiler/: Cargo.toml  aol_profiler.rs
src/profiler/benches/: profiler_bench.rs
tests/: test_orchestrator.py
tests/cpp/: test_allocator.cpp  test_migration.cpp
